test/main/com/ocaml/sdk/output/errors/samples/type/f5.ml
(*
Error: This expression has type int but an expression was expected of type int64 Hint: Did you mean `7L'?
*)
let _ = min 6L 7;;